# fsi_credit_demand_forecasting

./: .gitignore  LICENSE  README.md  app_streamlit.py  project_structure.txt  pyproject.toml  requirements.txt  setup_project.sh
data/: _contratacoes_clean_data.csv  contratacoes_data.csv  test_lstm_predictions.csv
models/: lstm_model.keras
notebooks/: I.data_analysis.ipynb  II.statistical_models.ipynb  III.deep_learning_models.ipynb  IV.model_deploy.ipynb  utils.py
src/fsi_credit/api/: main.py
src/fsi_credit/orchestration/: flows.py
src/fsi_credit/pipelines/: bronze_to_silver.py  ingest_to_bronze.py  silver_to_gold.py
