[tool.poetry]
name = "fsi_credit_demand_forecasting"
version = "0.1.0"
description = "Forecasting de demanda de crédito com Arquitetura Medalhão e MLOps"
authors = ["Alexandre Rodrigues <alexandre.dsa4@gmail.com>"]
readme = "README.md"
packages = [{ include = "fsi_credit", from = "src" }]

[tool.poetry.dependencies]
python = "==3.10.*"
pandas = "==2.2.2"
numpy = "==1.26.4"
scipy = "==1.13.1"
pyarrow = "==15.0.0"
torch = "==2.3.1"
joblib = "==1.5.3"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
pydantic = "^2.6.0"
prefect = { version = "^2.16.0", extras = ["aws"] }
mlflow = { version = "^2.11.0", extras = ["extras"] }
dvc = { version = "^3.48.0", extras = ["s3"] }
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
pandera = "^0.18.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
ray = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.2.0"
ruff = "^0.3.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pip-audit = "^2.7.0"

[tool.poetry.scripts]
run-api = "fsi_credit.api.main:run"
pipeline-bronze = "fsi_credit.pipelines.ingest_to_bronze:main"
pipeline-silver = "fsi_credit.pipelines.bronze_to_silver:main"
pipeline-gold = "fsi_credit.pipelines.silver_to_gold:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E","F","W","I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/fsi_credit"]

[tool.coverage.report]
show_missing = true
